# agent-r

./: Cargo.toml  README.md
src/: image.rs  main.rs  speech.rs  tray.rs
src/sensors/: cpu.rs  mod.rs  motherboard.rs
src/sensors/gpu/: amd.rs  gpu.rs  intel.rs  mod.rs  nvidia.rs
